# H2S-CarbonTracky

./: README.md  index.html  metadata.json  package-lock.json  package.json  strip_dark.ts
Backend/: .env.example  CHANGELOG.md  pyproject.toml
Backend/app/: main.py
Backend/app/core/: config.py
Backend/app/routes/: auth.py  carbon.py
Backend/app/services/: gemini_service.py
Backend/tests/: test_services.py
public/: llms.txt  robots.txt  sitemap.xml
src/: App.tsx  index.css  main.tsx
src/components/: Modal.tsx  ProgressBar.tsx  Toast.tsx
src/features/actions/: AchievementBadge.tsx  ActionPlanPage.tsx
src/features/auth/: AuthPage.tsx
src/features/dashboard/: Dashboard.tsx  DonutChart.tsx  EmissionList.tsx  StatCard.tsx  StreakWidget.tsx
src/features/insights/: InsightCard.tsx  InsightsPage.tsx
src/features/tracking/: CalculateForm.tsx  LogPage.tsx  QuickAdd.tsx
src/layout/: AppShell.tsx  Footer.tsx  Navbar.tsx
src/lib/: emissionFactors.ts  utils.ts
src/pages/: Landing.tsx  Onboarding.tsx  Profile.tsx
src/store/: authStore.ts  emissionStore.ts  onboardingStore.ts
src/types/: index.ts
